# edinet-agentic

./: .env.example  .gitignore  .gitmodules  WORKFLOW.md  pyproject.toml
.claude/rules/: agents.md  performance.md
configs/: EXP-A-0001.yaml  EXP-R-0002_haiku.yaml  EXP-R-0002_o4-mini.yaml  EXP-R-0003_haiku.yaml  EXP-R-0003_o4-mini.yaml
docs/: research_charter.md  research_log.md
docs/notes/: learning.md  thoughts.md
experiments/EVAL-0001/: dev_eval_set.json  plan.md  summary.md
experiments/EXP-A-0001/: notes.md  summary.md
experiments/EXP-D-0001/: agreement_analysis.md  h1_report.md  missingness_analysis.md  taxonomy.md
reproduction/: README.md  notes.md  plan.md
reproduction/notebooks/: Analyze.ipynb  EDA.ipynb
reproduction/results/EXP-R-0001/: summary.md
reproduction/results/EXP-R-0002/: summary.md
reproduction/results/EXP-R-0003/: summary.md
reproduction/sampling/: fraud_detection_n50_seed42.json
reproduction/scripts/: analyze.py  run.py  sample.py  smoke_test.py
scripts/: agreement.py  classify_errors.py  missingness.py  prepare_audit.py
scripts/EVAL-0001/: evaluate.py
scripts/EXP-A-0001/: run.py
src/agents/baseline/: __init__.py  graph.py  prompts.py  state.py
src/common/: data.py  metrics.py  parsing.py
