[project]
name = "edinet-agentic"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "edinet-bench",
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
]

[tool.uv.sources]
edinet-bench = { path = "external/EDINET-Bench" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
